1. Updated README - added some information about the project 2. Added an image of the incomplete dashboard 3. Added Text Field with an img wrapped inside it. 4. Changed the message board 5. Fixed Sidebar

--- a/styles.css
+++ b/styles.css
@@ -13,34 +13,90 @@ body{
 .header{
     grid-column: 2 / 5;
     display: grid;
-    grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     background-color: white;
 }
 
-.profile ul{
+.top-header{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 6fr 1fr;
 }
-.profile li{
-    list-style-type: none;
+
+/* Search Field */
+.bottom-header{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
-.buttons{
+.search-container{
+    padding: 20px 50px 20px 50px;
+} 
+
+.search-container form{
+    display: flex;
+    width: 100%;
+    height: 40px;
+    background-color:rgba(54,122, 246, 0.25);
+    border-radius: 25px;
+    padding-left: 20px;
+}
+
+.search-container .search-field{
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 100%;
+    padding-left: 10px;
+}
+
+.search-button{
+    background: none;
+    border: none;
+    color: gray;
+    opacity: 50%;
+}
+
+/* Control Functions  */
+
+.control{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+.control span{
+    height: 32px;
+    width: 32px;
+    color: black;
+}
+
+/* Personal Message */
+.greeting h3, .greeting h2{
+    margin-left: 50px;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 2rem;
+    letter-spacing: -1px;
+}
+
+/* Social Media */
+.social-media{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-evenly;
     align-items: center;
     gap: 25px;
 }
-.buttons .buttonStyle{
+
+.social-media .buttonStyle{
     color: #fff;
     padding: 6px 14px;
     border-radius: 6px;
     border: none;
     background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%);
     box-shadow: 0px 0.5px 1.5px rgba(54,122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255,255,255,.02);
-
 }
+
+
+/* Sidebar Section */
 .nav, .nav2{
     background: #4B91F7;
     color: white;
@@ -49,30 +105,53 @@ body{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    gap: 25px;
-    padding: 25px;
+    grid-template-rows: 160px repeat(5, minmax())
+}
+
+.logo{
+    padding: 50px 50px;
+}
+.logo h2{
+    text-align: center;
+    font-size: 2.5rem;
+    letter-spacing: -3px;
 }
 
 .navCard{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 1rem;
 }
+
+.side-icon{
+    justify-self: end;
+}
+h4{
+    justify-self: start;
+    letter-spacing: 1px;
+}
+
 .nav2{
-    padding: 40px 25px;
+    /* padding: 40px 25px; */
     grid-column: 1 / 2;
     display: grid;
-    gap: 25px;
+    /* gap: 25px; */
 }
 .portfolio{
     grid-column: 2 / 4;
     grid-row: 2 / 4;
-    background-color: #DFF6FF;
+    background-color: #;
 }
 
 .portfolio h3{
     font-size: 18px;
     font-family: sans-serif;
     text-align: left;
+    
 }
 
 .projects{
